# islander

./: .gitignore  CMakeLists.txt  Makefile  README.html  README.md  compile.sh
cli-parser/: CMakeLists.txt
cli-parser/include/: options_parser.h
cli-parser/include/exceptions/: parser_exeption.h
cli-parser/src/: main.cpp  options_parser.cpp
delete/: CMakeLists.txt  main.cpp
delete/src/: main.cpp  utils.cpp
islander-client/: CMakeLists.txt
islander-client/inc/: base_functions.h  communication_functions.h  defined_vars.h  openssl_communication.h  options_parser.h  utils.h  wrappers.h
islander-client/inc/exceptions/: parser_exeption.h
islander-client/src/: communication_functions.cpp  main.cpp  openssl_communication.cpp  options_parser.cpp  utils.cpp  wrappers.cpp
islander-server/: CMakeLists.txt
islander-server/dependencies/: apt.txt  mycert.pem  pacman.txt
islander-server/include/: base_header.hpp  defined_vars.hpp  enclosed_cmd.h  encrypted_server.h  execution_functs.hpp  internal_commands.hpp  options_parser.hpp  pipe.h  redirect.h  server.h  utils.hpp  wrappers.h
islander-server/src/: encrypted_server.cpp  execution_functs.cpp  main.cpp  options_parser.cpp  pipe.cpp  redirect.cpp  server.cpp  utils.cpp  wrappers.cpp
isle/: CMakeLists.txt  gdb.txt  process_attach
isle/binary/: namespaces
isle/inc/: base_header.h  cgroup_functions.h  defined_vars.h  funcs_with_process.h  helper_functions.h  manage_data.h  manage_volumes.h  mntnamespace.h  netnamespace.h  netns_helper_functions.h  syscall_wrappers.h  usernamespace.h
isle/inc/logger_interaction/: server_interaction.h
isle/inc/manage_data/: manage_mount.h  manage_remote_volumes.h  manage_tmpfs.h  manage_volumes.h
isle/islenodes/: islander.txt
isle/rootfs-alpine-stress/etc/apk/: world
isle/rootfs-alpine-stress/host_dev/: log
isle/rootfs-alpine-stress/host_dev/block/: 259:0  259:1  259:2  259:3  259:4  7:10  7:11  7:12  7:13  7:14  7:15  7:16  7:17  7:18  7:8  7:9
isle/rootfs-alpine-stress/host_dev/char/: 10:1  10:122  10:124  10:125  10:126  10:183  10:184  10:196  10:223  10:224  10:232  10:234  10:235  10:237  10:242  116:1  116:10  116:11  116:2  116:3  116:33  116:4  116:5  116:6  116:7  116:8  116:9  13:32  13:33  13:34  13:64  13:65  13:66  13:67  13:68  13:69  13:70  13:71  13:72  13:73  (+97 more)
isle/rootfs-alpine-stress/host_dev/disk/by-id/: nvme-KINGSTON_RBUSNS8154P3128GJ_50026B7682109630  nvme-KINGSTON_RBUSNS8154P3128GJ_50026B7682109630-part3  nvme-eui.0026b76821096305-part2
isle/rootfs-alpine-stress/host_dev/disk/by-path/: pci-0000:02:00.0-nvme-1-part4
isle/rootfs-alpine-stress/host_dev/input/by-id/: usb-Azurewave_USB2.0_HD_UVC_WebCam_NULL-event-if00  usb-COMPANY_2.4G_Device-event-if01  usb-COMPANY_2.4G_Device-event-kbd  usb-COMPANY_2.4G_Device-if01-event-kbd  usb-COMPANY_2.4G_Device-if01-event-mouse  usb-COMPANY_2.4G_Device-if01-mouse  usb-ITE_Tech._Inc._ITE_Device_8910_-event-kbd
isle/rootfs-alpine-stress/host_dev/input/by-path/: pci-0000:00:15.0-platform-i2c_designware.0-event-mouse  pci-0000:00:15.0-platform-i2c_designware.0-mouse  platform-asus-nb-wmi-event  platform-i8042-serio-0-event-kbd
isle/rootfs-alpine-stress/host_dev/snd/by-path/: pci-0000:00:1f.3
isle/rootfs-alpine-stress/host_dev/v4l/by-id/: usb-Azurewave_USB2.0_HD_UVC_WebCam_NULL-video-index0  usb-Azurewave_USB2.0_HD_UVC_WebCam_NULL-video-index1
isle/rootfs-alpine-stress/lib/: ld-musl-x86_64.so.1  libcrypto.so.38  libssl.so.39.0.0  libz.so.1.2.11
isle/rootfs-alpine-stress/lib/apk/db/: installed  scripts.tar
isle/rootfs-alpine-stress/root/: .ash_history  .bash_history
isle/rootfs-alpine-stress/sbin/: apk  mkmntdirs
isle/rootfs-alpine-stress/stress-1.0.4/src/: stress
isle/rootfs-alpine-stress/usr/lib/: libcrypto.so.38  libcrypto.so.38.0.0  libformw.so.6.0  libhistory.so.6.3  libmenuw.so.6.0  libncursesw.so.6.0  libpanelw.so.6.0  libreadline.so.6.3  libssl.so.39  libssl.so.39.0.0
isle/samples/hello_sample/: CMakeLists.txt
isle/samples/log_time_sample/: CMakeLists.txt  main.cpp
isle/src/: busybox_nsenter.c  cgroup_functions.c  error_functions.c  funcs_with_process.c  helper_functions.c  main.c  manage_data.c  manage_volumes.c  nsenter.c  nsenter.h  syscall_wrappers.c
isle/src/logger_interaction/: server_interaction.c
isle/src/manage_data/: manage_mount.c  manage_remote_volumes.c  manage_tmpfs.c  manage_volumes.c
isle/ubuntu-rootfs/root/: .bash_history
isle/ubuntu-rootfs/usr/lib/apt/: apt-helper
isle/ubuntu-rootfs/usr/lib/x86_64-linux-gnu/: libIPSec_MB.so.0  libJudy.so.1.0.3  libapt-pkg.so.6.0.0  libapt-private.so.0.0.0  libattr.so.1.1.2448  libdebconfclient.so.0.0.0  libe2p.so.2.3  libext2fs.so.2.4  libfdisk.so.1.1.0  libform.so.6.2  libformw.so.6.2  libmenu.so.6.2  libmenuw.so.6.2  libpanel.so.6.2  (+11 more)
isle/ubuntu-rootfs/usr/sbin/: agetty  badblocks  blkdiscard  blkid  blkzone  blockdev  cfdisk  chcpu  chgpasswd  chmem  chpasswd  chroot  cppw  ctrlaltdel  debugfs  dumpe2fs  e2freefrag  e2fsck  e2image  e2undo  e4crypt  e4defrag  faillock  fdformat  fdisk  filefrag  findfs  fsck  fsck.cramfs  fsck.minix  fsfreeze  fstab-decode  fstrim  groupadd  groupdel  groupmems  groupmod  grpck  grpconv  grpunconv  (+52 more)
ps/: CMakeLists.txt  main.cpp
ps/inc/: utils.h
ps/src/: main.cpp
remote-vlm-manager/: CMakeLists.txt  main.cpp
remote-vlm-manager/az_terraform/: main.tf  variable.tf
remote-vlm-manager/az_terraform/az_storage/: container.tf  var.tf
remote-vlm-manager/az_terraform2/: backend.tf
remote-vlm-manager/inc/: az_interaction.h  base_header.h  gcp_interaction.h  s3_interaction.h  utils.h
remote-vlm-manager/s3_terraform/: main.tf  variable.tf
remote-vlm-manager/s3_terraform/s3/: bucket.tf  var.tf
remote-vlm-manager/src/: az_interaction.cpp  gcp_interaction.cpp  main.cpp  s3_interaction.cpp  utils.cpp
remote-vlm-manager/terraform/az_terraform/: backend.tf  variable.tf
remote-vlm-manager/terraform/gcp_terraform/: main.auto.tfvars  main.tf  outputs.tf  variables.tf
remote-vlm-manager/terraform/s3_terraform/: main.tf
remote-vlm-manager/terraform/s3_terraform/s3/: var.tf
(+285 files in other folders)
