cmake_minimum_required(VERSION 3.15)
project(islander_engine C CXX)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 17)

# Project source compilation
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/inc HEADERS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src SOURCES)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/inc/manage_data MNG_DATA_HEADERS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/manage_data MNG_DATA_SOURCES)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/inc/logger_interaction LOGGER_IPC_HEADERS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/logger_interaction LOGGER_IPC_SOURCES)

add_executable(islander_engine
        ${SOURCES} ${HEADERS}
        ${MNG_DATA_HEADERS} ${MNG_DATA_SOURCES}
        ${LOGGER_IPC_HEADERS} ${LOGGER_IPC_SOURCES})
